--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 15U12U
 subtitle: Isuru Tharanga
 email: 15u12u@protonmail.com
 description: 
-baseurl: "15u12u" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 
