--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 15U12U
 subtitle: Isuru Tharanga
 email: 15u12u@protonmail.com
-description: 
+description: GitHub Page of @15u12u
 baseurl: "" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
